syntax = "proto3";

package protobuf;

option java_multiple_files = true;
option java_package = "net.discdd.bundletransport.service";
option java_outer_classname = "FileServiceEntry";

message ReqFilePath { string value = 1; }

message RespFileInfo {
  string name = 1;
  int64 size = 2;
}

enum Status {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
  UNAVAILABLE = 4;
}

enum BundleSenderType {
  UNDEFINED = 0;
  CLIENT = 1;
  TRANSPORT = 2;
  SERVER = 3;
}

message BundleSender {
  string id = 1;
  BundleSenderType type = 2;
}

message MetaData {
  string name = 1;
  string type = 2;
}

message File {
  bytes content = 1;
}


message FileUploadRequest {
  oneof request {
    MetaData metadata = 1;
    File file = 2;
  }
}

message FileUploadResponse {
  string name = 1;
  Status status = 2;
}

message Bytes {
  bytes value = 1;
  BundleSender sender = 4;
}

service FileService {
  rpc UploadFile(stream FileUploadRequest) returns (FileUploadResponse) {}
  rpc DownloadFile(ReqFilePath) returns (stream Bytes) {}
}